change homepage url

--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
   "bugs": {
     "url": "https://github.com/virtual/fcc-game-of-life/issues"
   },
-  "homepage": "https://github.com/virtual/fcc-game-of-life/"
+  "homepage": "https://virtual.github.io/fcc-game-of-life/"
 }
